Добавлена первая выборка

--- a/coursework/Views/Home/Index.cshtml
+++ b/coursework/Views/Home/Index.cshtml
@@ -18,11 +18,11 @@
         <section class="col-md-4" aria-labelledby="selectionsTitle">
             <h2 id="selectionsTitle">Выборки данных</h2>
             <p>Здесь хранятся функции по селекции данных.</p>
-            <p><a class="btn btn-outline-dark" href="../Selections/Index_1">Задание 2.1 &raquo;</a></p>
-            <p><a class="btn btn-outline-dark" href="../Selections/Index_2">Задание 2.2 &raquo;</a></p>
-            <p><a class="btn btn-outline-dark" href="../Selections/Index_3">Задание 2.3 &raquo;</a></p>
-            <p><a class="btn btn-outline-dark" href="../Selections/Index_4">Задание 2.4 &raquo;</a></p>
-            <p><a class="btn btn-outline-dark" href="../Selections/Index_5">Задание 2.5 &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Selections/Index1">Выборка 1 &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Selections/Index2">Выборка 2 &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Selections/Index3">Выборка 3 &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Selections/Index4">Выборка 4 &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="../Selections/Index5">Выборка 5 &raquo;</a></p>
         </section>
     </div>
 </main>
