Не администраторы не могут изменять что-то в таблицах для администраторов и не могут смотреть по ссылке

--- a/coursework/Views/LoginLogs/Index.cshtml
+++ b/coursework/Views/LoginLogs/Index.cshtml
@@ -1,57 +1,66 @@
 ﻿@model IEnumerable<coursework.Models.LoginLogs>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Логи";
 }
 
-<h2>Index</h2>
+<h2>Логи</h2>
+@if (ViewBag.userRole == 1)
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                Логин
+            </th>
+            <th>
+                Фамилия
+            </th>
+            <th>
+                Имя
+            </th>
+            <th>
+                Отчество
+            </th>
+            <th>
+                Время входа в систему
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Логин
-        </th>
-        <th>
-            Фамилия
-        </th>
-        <th>
-            Имя
-        </th>
-        <th>
-            Отчество
-        </th>
-        <th>
-            Время входа в систему
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Users.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Users.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Users.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Users.Patronymic)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LoginTime)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Users.Username)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Users.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Users.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Users.Patronymic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LoginTime)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-        </td>
-    </tr>
+    </table>
 }
-
-</table>
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
