--- a/coursework/Views/Roles/Delete.cshtml
+++ b/coursework/Views/Roles/Delete.cshtml
@@ -5,36 +5,45 @@
 }
 
 <h2>Удалить</h2>
+@if (ViewBag.userRole == 1)
+{
+    <h3>Вы действительно хотите удалить это?</h3>
+    <div>
+        <h4>Роль</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Название
+            </dt>
 
-<h3>Вы действительно хотите удалить это?</h3>
-<div>
-    <h4>Роль</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Название
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                Описание
+            </dt>
 
-        <dt>
-            Описание
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-danger" /> |
-            @Html.ActionLink("Вернуться назад", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Удалить" class="btn btn-danger" /> |
+                @Html.ActionLink("Вернуться назад", "Index")
+            </div>
+        }
+    </div>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
