--- a/coursework/Views/Selections/Index1.cshtml
+++ b/coursework/Views/Selections/Index1.cshtml
@@ -11,7 +11,7 @@
 <table class="table">
     <tr>
         <th>
-            ID Клиента
+            ФИО Клиента
         </th>
         <th>
             Кол-во оставленных заявок
