--- a/coursework/Views/Users/Create.cshtml
+++ b/coursework/Views/Users/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Добавить</h2>
 @if (ViewBag.userRole == 1)
 {
-    @using (Html.BeginForm())
+    using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
